# loadwarka

./: .gitignore  .gitmodules  Makefile.am  README.md  build.sh  clean.sh  configure.ac  run.sh
config/: default  dev
src/: main.c  x86_boot_sector.S  x86_common.h  x86_stage1.S  x86_stage1.ld  x86_stage2.S  x86_stage2.ld
src/x86/: common.S  header.S  linker.ld  main.c  print.S  stage1.S  stage1.ld  stage2.S  stage2.ld  start.S
