AC_PREREQ([2.68])
AC_INIT([testyboot],
  [0.0.0],
  [https://github.com/tailix/testyboot/issues],
  [testyboot],
  [https://github.com/tailix/testyboot])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/main.c])

AC_CANONICAL_HOST



AM_INIT_AUTOMAKE([1.9 subdir-objects])

AC_CONFIG_FILES([
  Makefile
])

AC_LANG([C])

AM_PROG_AR
AM_PROG_AS
AC_PROG_CC
AC_PROG_CC_C99
AC_PROG_RANLIB
AC_C_INLINE
AC_CHECK_HEADER_STDBOOL
AC_CHECK_HEADERS([stdarg.h stddef.h stdint.h stdio.h])

AC_OUTPUT
